@@ -1,27 +1,26 @@
 ---
-product_name:      manageiq
+product_name: manageiq
 repos:
-  ref:             najdorf
+  ref: najdorf
   manageiq:
-    url:           https://github.com/ManageIQ/manageiq.git
+    url: https://github.com/ManageIQ/manageiq.git
     ref:
   manageiq_appliance:
-    url:           https://github.com/ManageIQ/manageiq-appliance.git
+    url: https://github.com/ManageIQ/manageiq-appliance.git
     ref:
   manageiq_ui_service:
-    url:           https://github.com/ManageIQ/manageiq-ui-service.git
+    url: https://github.com/ManageIQ/manageiq-ui-service.git
     ref:
 version:
 release:
 rpm:
-  version:         14.0.0
-  release:         0
+  version: 14.1.0
+  release: 1
   repo_name:
-  org_name:        manageiq
+  org_name: manageiq
   product_summary: ManageIQ Management Engine
-  product_url:     https://github.com/ManageIQ/manageiq
+  product_url: https://github.com/ManageIQ/manageiq
   changelog:
-# npm_registry:      https://npm.manageiq.org
 rpm_repository:
   digitalocean_access_token:
   s3_api:
@@ -30,15 +29,15 @@ rpm_repository:
     bucket: rpm-manageiq-org
     endpoint: nyc3.digitaloceanspaces.com
   :arches:
-    - "src"
-    - "noarch"
-    - "ppc64le"
-    - "s390x"
-    - "x86_64"
+  - src
+  - noarch
+  - ppc64le
+  - s390x
+  - x86_64
   :content:
     :14-najdorf:
       :targets:
-        - el8
+      - el8
       :rpms:
         :kafka: !ruby/regexp /.+-2\.3.+/
         :manageiq: !ruby/regexp /.+-14\.\d\.\d-(alpha|beta|rc)?\d(\.\d)?\.el.+/
@@ -53,6 +52,6 @@ rpm_repository:
         :wmi: !ruby/regexp /.+-1\.3\.14.+/
     :14-najdorf-nightly:
       :targets:
-        - el8
+      - el8
       :rpms:
         :manageiq-nightly: !ruby/regexp /.+-14\.\d\.\d-(\d\.\d\.)?\d{14,}+\.el.+/
