@@ -1,4 +1,7 @@
 %changelog
+* Tue Jul 12 2022 ManageIQ <contact@manageiq.org> - 14.1.0-1
+- Najdorf 1 build
+
 * Tue Aug 31 2021 Jason Frey <fryguy9@gmail.com> - 14.0.0-1
 - Initial build of manageiq-release for Najdorf
 
